# study_buddy_backend

./: .gitignore  Dockerfile  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  run_migration.py
migrations/: README.md  add_agent_name.sql  add_indexes.sql  add_token_tracking.sql  add_tools_to_projects.sql  add_user_settings_columns.sql  fix_timestamps.sql  rollback_user_settings_columns.sql
scripts/: add_system_prompt_column.py  fix_timestamp_defaults.py  reset_chromadb.py  seed_system_prompts.py
src/: app.py  config.py
src/api/: auth_routes.py  chat_routes.py  document_routes.py  export_routes.py  project_routes.py  stats_routes.py  system_routes.py  user_routes.py  voice_routes.py
src/core/: constants.py  error_response.py  exceptions.py  interfaces.py  logging_config.py  prompts.py
src/middleware/: error_handler.py
src/models/: database.py  schemas.py
src/providers/: chroma_provider.py  ollama_provider.py
src/repositories/: conversation_repository.py  document_repository.py  message_repository.py  project_repository.py
src/services/: auth_service.py  chat_service.py  document_service.py  export_service.py  user_service.py  voice_service.py
src/tools/: __init__.py  base.py  calculator.py  langchain_tools.py  registry.py  web_search.py
src/utils/: document_processor.py  hallucination_detector.py  query_classifier.py  token_counter.py
tests/: __init__.py  api_comprehensive_test.py  conftest.py  gpu_test.py  test_system_prompts_integration.py
tests/test_api/: __init__.py  test_project_routes.py
(+11 files in other folders)
